Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41449

Recursive repaint crash in QListWidget on OSX

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0
    • 5.3.2
    • GUI: Painting
    • None
    • OS X 10.9.5
    • macOS
    • 7146cbed6e3a42389593b775bf4a26f05b4b8d82

    Description

      Editing a QListWidget with a horizontal scrollbar sometimes crashes just after the editor closes with the following warnings:
      QWidget::repaint: Recursive repaint detected
      QWidget::paintEngine: Should no longer be called
      QPainter::begin: Paint device returned engine == 0, type: 1

      1. QAbstractItemView::event() for QEvent::Paint calls doItemsLayout()
      2. Which leads to calling setGeometry()
      3. Which calls [NSView setFrame:]
      4. Which directly initiates another repaint

      This might be the same bug as QTBUG-37233, the QListWidget is to the side of a QGLWidget and I have not been able to replicate the crash or the repaint warning in a simpler application.

      I've attached a backtrace of the final crash in QPaintEngine::syncState() as well one with QT_FATAL_WARNINGS=1 set that shows the source of the Recursive repaint detected warning.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            danielsabo Daniel Sabo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes